<resources>
    <string name="app_name">Stuff On Rent</string>

    <string name="emailid">Enter E-mail ID</string>
    <string name="password">Enter Password</string>
    <string name="fname">Enter First Name</string>
    <string name="lname">Enter Last Name</string>
    <string name="adrs">Enter Address</string>
    <string name="cont">Enter Mobile Number</string>
    <string name="con_password">Enter Confirm Password</string>

    <!--button-->
    <string name="register">Register</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
